# frdm-ke06z-tiny

./: .clang-format  .gitignore  .gitmodules  .rerun  CMakeLists.txt  CMakePresets.json  README.md  blue-f0.mk  blue-f030.mk  blue-f051.mk  blue-pill.mk  docs.mk  f3-discovery.mk  fsl.mk  lib_fsl.mk  lib_tiny.mk  link.ld  linker.ld  makefile  makefile-worker.mk  nucleo-g031k8.mk  nucleo-g070rb.mk  openocd-debug.cfg  openocd-erase.cfg  openocd-upload.cfg  openocd.mk  patch.mk  stm32f3-discovery.mk  stm32vl-discovery.mk  target-worker.mk  target.mk  tiny.mk
.github/workflows/: build.yml
cmake/: CMakeLists.txt  flags.cmake  fsl.cmake
cmake/fsl/: CMakeLists.txt
ld/: blue-f030.ld  blue-pill.ld  common.ld  nucleo-g031k8.ld  nucleo-g070rb.ld  stm32f3-discovery.ld  stm32vl-discovery.ld
lib/SystemView/Sample/NoOS/Config/Cortex-M/: SEGGER_SYSVIEW_Config_NoOS.c
lib/nxp/SDK_2.11.0_FRDM-KE06Z/: FRDM-KE06Z_manifest_v3_9.xml  SW-Content-Register.txt
lib/nxp/SDK_2.11.0_FRDM-KE06Z/CMSIS/Driver/Include/: CMSIS_Driver_Include_I2C_MKE06Z4.cmake  CMSIS_Driver_Include_SPI_MKE06Z4.cmake  CMSIS_Driver_Include_USART_MKE06Z4.cmake
lib/nxp/SDK_2.11.0_FRDM-KE06Z/components/lists/: component_lists_MKE06Z4.cmake
lib/nxp/SDK_2.11.0_FRDM-KE06Z/components/serial_manager/: component_serial_manager_MKE06Z4.cmake  component_serial_manager_uart_MKE06Z4.cmake
lib/nxp/SDK_2.11.0_FRDM-KE06Z/components/uart/: component_uart_adapter_MKE06Z4.cmake
lib/nxp/SDK_2.11.0_FRDM-KE06Z/devices/MKE06Z4/: device_MKE06Z4_CMSIS_MKE06Z4.cmake  device_MKE06Z4_startup_MKE06Z4.cmake  device_MKE06Z4_system_MKE06Z4.cmake
lib/nxp/SDK_2.8.0_FRDM-KE06Z/: FRDM-KE06Z_manifest_v3_6.xml  SW-Content-Register.txt
lib/nxp/SDK_2.9.0_FRDM-KE06Z/: FRDM-KE06Z_manifest_v3_8.xml  SW-Content-Register.txt
lib/nxp/SDK_2.9.0_FRDM-KE06Z/CMSIS/Include/: CMSIS_Include_common_MKE06Z4.cmake  CMSIS_Include_core_cm0plus_MKE06Z4.cmake  CMSIS_Include_dsp_MKE06Z4.cmake
lib/nxp/SDK_2.9.0_FRDM-KE06Z/components/lists/: component_lists_MKE06Z4.cmake
lib/nxp/SDK_2.9.0_FRDM-KE06Z/components/serial_manager/: component_serial_manager_MKE06Z4.cmake  component_serial_manager_uart_MKE06Z4.cmake
lib/nxp/SDK_2.9.0_FRDM-KE06Z/components/uart/: component_uart_adapter_MKE06Z4.cmake
lib/nxp/SDK_2.9.0_FRDM-KE06Z/devices/MKE06Z4/: device_MKE06Z4_CMSIS_MKE06Z4.cmake  device_MKE06Z4_startup_MKE06Z4.cmake  device_MKE06Z4_system_MKE06Z4.cmake
openocd/: debug.cfg  erase.cfg  upload.cfg
openocd/blue-f0/: debug.cfg  upload.cfg
openocd/blue-f030/: upload.cfg
openocd/blue-f051/: erase.cfg  upload.cfg
openocd/blue-pill/: debug.cfg  erase.cfg  upload.cfg
openocd/f3-discovery/: upload.cfg
openocd/nucleo-g031k8/: erase.cfg  upload.cfg
openocd/nucleo-g070rb/: debug.cfg  upload.cfg
openocd/stm32f3-discovery/: upload.cfg
openocd/stm32vl-discovery/: debug.cfg  erase.cfg  upload.cfg
patch/: system-view-freertos-10.3.1.patch
scripts/: stlinkv1-quirks
src/: FreeRTOSConfig.h  hello_world.c  hello_world.h  hooks.c  main.c  start.c
src/app/blue-f0/: clock.c  heartbeat.c  main.c  micro.h
src/app/blue-f030/: start.c
src/app/blue-f051/: clock.c  heartbeat.c  start.c
src/app/blue-pill/: clock.c  heartbeat.c  main.c  start.c
src/app/f3-discovery/: main.c  start.c
src/app/nucleo-g031k8/: heartbeat.c  micro.h  start.c
src/app/nucleo-g070rb/: clock.c  clock.h  heartbeat.c  main.c  start.c
src/app/stm32f3-discovery/: acceleration.h  accelerometer_plugin.c  accelerometer_plugin.h  clock.c  clock.h  display.c  display.h  display_plugin.c  display_plugin.h  heartbeat.c  i2c1_pins.c  i2c1_pins.h  led.h  leds.c  leds.h  lsm303d.c  lsm303d.h  main.c  message.h  micro.h
src/app/stm32vl-discovery/: clock.h  heartbeat.c  main.c  micro.h  start.c
src/device/: lsm303dlhc.c  lsm303dlhc.h
src/driver/: heartbeat.c  stm32f30x_conf.h  systick.c  systick.h
src/hardware/: clock.c  clock.h  flash_test.c  flash_test.h  heartbeat.c  interrupts.h  systick.c  systick.h  uart.c  uart.h  watchdog.c  watchdog.h
src/periphal/: clock.c  heartbeat.c  i2c1.c  i2c1.h
src/peripheral/: clock.c  i2c1.c
src/peripheral/cmsis/: systick.c
src/peripheral/stm32f30x/: clock.h  stm32f30x_conf.h  watchdog.c
src/peripheral/stm32f3xx/: async_i2c1.c  async_i2c1.h  i2c1.c  i2c1.h  stm32f3xx_hal_conf.h  tiny_i2c_i2c1.c  tiny_i2c_i2c1.h  tiny_i2c_stm32f3xx.c  tiny_i2c_stm32f3xx.h  watchdog.c
src/system_view/: Global.h  SEGGER_RTT_Conf.h  SEGGER_SYSVIEW_Conf.h  SEGGER_SYSVIEW_Config_FreeRTOS.c  SEGGER_SYSVIEW_FreeRTOS.h
(+203 files in other folders)
